<resources>
    <string name="app_name">无限淘</string>
    <string name="tao_bao_featured_sub">淘宝精选</string>
    <string name="main_tab_tao_bao">首页</string>
    <string name="main_tab_member_center">斩妖之旅</string>
    <string name="main_tab_deposit">刮刮卡</string>
    <string name="main_tab_income_hall">任务大厅</string>
    <string name="main_tab_mine">我的</string>
    <string name="withdraw_rule">提现金额不能低于1元,按提示金额的0.1%收手续费,单笔手续费小于0.1元,按0.1元收取</string>
    <string name="interest">昨日收益榜</string>
    <string name="deposit">累计收益榜</string>
    <string name="featured_products">淘宝精选</string>
    <string name="exclusive_firends">专属好友</string>
    <string name="general_friends">普通好友</string>
    <string name="recording_duration">时长记录</string>
    <string name="recording_upper_limit">上限记录</string>
    <string name="auto_work_time">自动工作剩余时间</string>
    <string name="hand_value">手气值</string>
    <string name="open_red_pg">在开红包时有更多机会开到大红包 ，红包手气越高等级越高开到红包 越大。</string>
    <string name="go_see">去看看</string>
    <string name="everday">提升每天自动收红包上限</string>
    <string name="improve_upper_limit">提高上限礼包</string>
    <string name="net_improve">下次免费提高上限</string>
    <string name="to_taobao_improve">去淘宝购物提高每天上限</string>
    <string name="upper_limit">1.去淘宝每买1件商品，上限+100， 每天最多300 2.去淘宝每消费1元， 上限+1，每天最多500</string>
    <string name="to_shopping">去购物</string>
    <string name="add_receive_time">增加自动收红包时间</string>
    <string name="friend_scan_code">好友扫码增加5分钟</string>
    <string name="share_friend_code">分享二维码给好友扫码</string>
    <string name="to_invite">去邀请</string>
    <string name="red_pg_count">个红包,上限</string>
    <string name="count">个</string>
    <string name="after_received">前重置</string>
    <string name="drop_out_app">再按一次退出程序</string>
    <string name="withdraw_money">提现金额</string>
    <string name="frist">首次免费</string>
    <string name="input_withdraw_money">请输入提现金额</string>
    <string name="able_withdraw_money">当前最多可提现</string>
    <string name="yuan">元</string>
    <string name="all_withdraw">全部提现</string>
    <string name="min_withdraw_money">最低提现金额为</string>
    <string name="alypay">支付宝</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat_group">朋友圈</string>
    <string name="confirm_withdraw">确认提现</string>
    <string name="three_day_arrival">(预计3个工作日内到帐)</string>
    <string name="number">手机号</string>
    <string name="next">下一步</string>
    <string name="current_number">当前手机号</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="payment_required">需付款:</string>
    <string name="commit_order">提交订单</string>
    <string name="setting_address">设置收货地址</string>
    <string name="total_price_of_goods">商品总价</string>
    <string name="pay_type">支付方式</string>
    <string name="receiver">收货人</string>
    <string name="input_receiver">请填写收货人</string>
    <string name="input_your_number">请填写您的手机号</string>
    <string name="choose_area">选择地区</string>
    <string name="province_city_district">省-市-区</string>
    <string name="detailed_address">详细地址</string>
    <string name="input_detailed_address">请填写详细地址</string>
    <string name="save">保存</string>
    <string name="friend_invite">好友邀请</string>
    <string name="shopping_behavior">购物行为</string>
    <string name="shopping">购物</string>
    <string name="spending_power">消费能力</string>
    <string name="usage_frequency">使用频率</string>
    <string name="sharing_frequency">分享频率</string>
    <string name="my_annual_profit_rate">我的年利化率等级</string>
    <string name="promotion_rate">提升年化利率，加速升钱</string>
    <string name="share_super_man">分享无限淘</string>
    <string name="invite_friend">邀请好友，躺赚好友每单收益</string>
    <string name="share">推广邀请</string>
    <string name="share_cha">分享到</string>
    <string name="share_desc">首次分享可以获得奖励哦</string>
    <string name="friend_boost_">好友助力</string>
    <string name="frequent_shopping">频繁购物</string>
    <string name="buy">买买买能更快提升利率，花得多，赚的多</string>
    <string name="what_is_rate">年化利率是什么？</string>
    <string name="rate_one">年化利率是决定每日生钱得重要因素，由用户得购物行为、 消费能力、使用频率、分享频率、好友邀请五大维度综合评 估，是动态变化的，数值越高生钱越多。</string>
    <string name="rate_two">每日生钱=花钱总存款x年化利率÷365 例如：花钱总存款为200元，年化利率为13.19%，今日生 钱：200x13.19%÷365=0.073. 生钱收益按日结算给用户。</string>
    <string name="my_fans">我的好友</string>
    <string name="view_invite_my">查看邀请我的人</string>
    <string name="invite_fans">邀请好友</string>
    <string name="total_fans">累计好友</string>
    <string name="total_jinggong_deposit">累计获得红包</string>
    <string name="my_balance">我的余额</string>
    <string name="withdraw_red_bag">%1$s提现%2$4.2f元</string>
    <string name="quit_login">退出登录</string>
    <string name="alipay_nick_name">支付宝账号</string>
    <string name="city">城市</string>
    <string name="change_alipay">更换支付宝</string>
    <string name="frist_wechat_login">*你需要先用微信登录，在【我的】-【个人信息】中绑定手 机号码，才能使用手机号登录。</string>
    <string name="find_order">找回丢失订单</string>
    <string name="confirm_super_man_order">请确认是通过无限淘去淘宝下的单</string>
    <string name="input_tao_bao_order_sn">请输入淘宝订单号</string>
    <string name="immediately_find">立即找回</string>
    <string name="order_find_tutorial">订单找回教程</string>
    <string name="not_find_order">暂时没有找回订单</string>
    <string name="five_find_order">超人将在5天内尝试为您找回订单</string>
    <string name="result_notification">具体的结果请留意消息通知</string>
    <string name="not_find_reson">没找回订单的原因</string>
    <string name="order_sn_error">1.订单编号输入错误</string>
    <string name="view_ok_order">查看正确下单方式</string>
    <string name="not_join_plan">2.购买商品没有参加推广计划；</string>
    <string name="error_order_path">3.错误下单路径，导致无法找回。</string>
    <string name="online_service">在线客服</string>
    <string name="find_order_success">成功找回订单!</string>
    <string name="super_find_order_success">超人成功的帮您找回了您丢失的订单</string>
    <string name="confirm">确定</string>
    <string name="income_hall_title">第%1$s阶段</string>
    <string name="friend_get_one_yuan">好友助力可获得1元现金红包</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="cancel">取消</string>
    <string name="input_query_coupon">输入(商品标题)查找优惠卷</string>
    <string name="save_money_tutorial">省钱教程</string>
    <string name="input_nick_name">请输入内容</string>
    <string name="choose_them">选择主题</string>
    <string name="query_more"><![CDATA[查看更多>]]></string>
    <string name="gain_profit">邀请好友注册下载，有机会开出王者皮肤和现金红包！</string>
    <string name="share_poster">分享邀请</string>
    <string name="my_invitation">我的邀请码:</string>
    <string name="copy">复制</string>
    <string name="total_invite_success">累计成功邀请</string>
    <string name="invite_rule">邀请规则</string>
    <string name="version_update">版本更新</string>
    <string name="service_protocol">协议</string>
    <string name="phone_cache">清除缓存</string>
    <string name="send_sms">验证码已通过短信发送至:</string>
    <string name="input_ver_code">输入获取的验证码</string>
    <string name="wechat_login">微信登录</string>
    <string name="vercode_login">验证码登录</string>
    <string name="pw_login">密码登录</string>
    <string name="other_login_type">其他登录方式</string>
    <string name="login_agree">登录即代表同意</string>
    <string name="service_terms">《无限淘服务条款》</string>
    <string name="welcome">欢迎界面</string>
    <string name="search">搜索</string>
    <string name="recording">记录</string>
    <string name="born">收益</string>
    <string name="leaderboard">排行榜</string>
    <string name="production_of_money">增加收益</string>
    <string name="rate">红包收益</string>
    <string name="available_balance">可用提现</string>
    <string name="withdraw">提现</string>
    <string name="paste_taobao_title">粘贴淘宝商品标题</string>
    <string name="two_save_money">两步省钱</string>
    <string name="copy_taobao_title">复制淘宝标题</string>
    <string name="open_super_map">打开无限淘</string>
    <string name="everyday_interest">每日利息</string>
    <string name="not_data">暂无数据</string>
    <string name="activation">激活</string>
    <string name="_365_vip">送365天VIP权益</string>
    <string name="_s30_vip">送30天VIP权益</string>
    <string name="all_order">全部订单</string>
    <string name="taobao_order_list">淘宝商品订单</string>
    <string name="self_order_list">自营商品订单</string>
    <string name="self_order_commodity">自营商品</string>
    <string name="history_recording_">历史记录</string>
    <string name="search_hot_recording">热搜关键词</string>
    <string name="taobao">淘宝</string>
    <string name="tianmao">天猫</string>
    <string name="youxuan">优选</string>
    <string name="buy_zero">0元购</string>
    <string name="buy_get">购买奖</string>
    <string name="share_get">会员奖</string>
    <string name="buy_get_regx">%1$s%2$3.2f金币</string>
    <string name="money_deposit">元存款</string>
    <string name="month_volume">月销:%1$d</string>
    <string name="limited_time">限时秒杀</string>
    <string name="over_time">距离结束仅省</string>
    <string name="panic_buying">立即抢购</string>
    <string name="album">从手机相册选择</string>
    <string name="takea_photo">拍照</string>
    <string name="are_you_quit">确定退出登录吗?</string>
    <string name="person_info">个人信息</string>
    <string name="about_wxt">关于无限淘</string>
    <string name="help_center">帮助中心</string>
    <string name="banding_number">绑定手机号</string>
    <string name="change_number">更换手机号</string>
    <string name="change_nick_name">修改昵称</string>
    <string name="setting_nick_name">设置昵称</string>
    <string name="change_wechat_id">修改微信号</string>
    <string name="setting_wechat_id">设置微信号</string>
    <string name="change_info">更改信息</string>
    <string name="detail">明细</string>
    <string name="balance">余额</string>
    <string name="balance_my_detail">历史明细</string>
    <string name="balance_my">我的余额</string>
    <string name="balance_my_num">￥2222.21元</string>
    <string name="balance_my_add">已累计提现￥23.26元</string>
    <string name="balance_my_ggk">刮卡有机会开出现金红包哦！快去试试吧！</string>
    <string name="balance_my_top_up">充值</string>
    <string name="balance_my_top_u">￥</string>
    <string name="balance_my_top_up_num">充值金额</string>
    <string name="balance_my_jianyi">建议单词充值20.0元</string>
    <string name="balance_my_withdraw">提现</string>
    <string name="balance_my_wx">微信</string>
    <string name="balance_my_zfb">支付宝</string>
    <string name="balance_my_affirm">确认充值</string>
    <string name="balance_my_gogk">去刮卡</string>
    <string name="balance_detail">余额明细</string>
    <string name="ggk_detail">刮刮卡明细</string>
    <string name="know_rate">更多收益</string>
    <string name="withdraw_recording">提现记录</string>
    <string name="number_login">手机号登录</string>
    <string name="share_more_them">更多主题</string>
    <string name="retrieve_order">找回订单</string>
    <string name="find_order_error">订单找回失败</string>
    <string name="find_order__success">订单找回成功</string>
    <string name="zero">0.00</string>
    <string name="i_know">我知道了</string>
    <string name="_00_00">00:00</string>
    <string name="potential_friend">(1)潜在好友</string>
    <string name="potential_friend_msg">扫描你的邀请码后没有登录无限淘APP的好友为潜在好友,潜在好友具有7天的锁粉时间,好友在锁粉时间内登录无限淘APP就会成功激活,成为你的直属好友,你将享受好友的进贡;</string>
    <string name="direct_friend">(2)直属好友</string>
    <string name="direct_friend_msg">直属好友也叫专属好友,是扫描你的二维码后及时登录无限淘APP的好友,是你直接邀请的好友;</string>
    <string name="indirect_friend">(3)间接好友</string>
    <string name="indirect_friend_msg">间接好友也叫普通好友,是你的直属好友或其他间接好友所邀请的好友;</string>
    <string name="invite_success">成功邀请【%1$s】\n获得邀请现金奖励</string>
    <string name="tips">温馨提示</string>
    <string name="operate">后可再次操作</string>
    <string name="interval">请间隔</string>
    <string name="scrapingcard_text1">惊喜刮刮卡</string>
    <string name="taskhall_text2">交易大厅</string>
    <string name="taskhall_text3">惊喜刮刮卡</string>
    <string name="taskhall_text4">我的背包</string>
    <string name="taskhall_text5">当前幸运值</string>
    <string name="taskhall_text6">如何获取幸运值？</string>
    <string name="taskhall_text9">刮刮卡分红</string>
    <string name="taskhall_text10">英雄卡卷轴</string>
    <string name="taskhall_text16">刮刮卡奖池</string>
    <string name="taskhall_text17">6-128元王者皮肤兑换卷1-50元王者皮肤兑换卷集齐英雄卡得平  台分红</string>
    <string name="taskhall_text18">刮刮卡领取</string>
    <string name="taskhall_text19">更多</string>
</resources>