<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/base_title"/>
    <com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_17"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/potential_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/potential_friend_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_17"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/direct_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/direct_friend_msg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_17"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center_vertical"
                android:text="@string/indirect_friend"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_13"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:text="@string/indirect_friend_msg"/>
        </LinearLayout>
    </com.wuxiantao.wxt.ui.custom.scrollview.ReboundScrollView>

</LinearLayout>