<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitesmoke">

    <include
        layout="@layout/base_title"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_200"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/not_find_order"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/five_find_order"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_gravity="center_horizontal"
            android:text="@string/result_notification"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/dp_345"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@drawable/bg_white_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_17"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/not_find_reson"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/order_sn_error"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/not_join_plan"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/grey"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/error_order_path"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/red"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/view_ok_order"/>
        <RelativeLayout
            android:id="@+id/order_find_failure_online"
            android:layout_width="@dimen/dp_145"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@drawable/base_search_shape">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true">
                <ImageView
                    android:layout_width="@dimen/dp_22"
                    android:layout_height="@dimen/dp_21"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/online_service_icon"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_vertical"
                    android:text="@string/online_service"
                    android:layout_marginLeft="@dimen/dp_5"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>