<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="@dimen/dp_302"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_background"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_20"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:text="@string/tips"
            android:layout_marginTop="@dimen/dp_15"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="#000000"
                android:text="@string/interval"/>
            <TextView
                android:id="@+id/popup_operate_prompt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_25"
                android:textColor="#FF2020"
                android:layout_marginLeft="@dimen/dp_2"
                android:layout_marginRight="@dimen/dp_2"
                android:text="@string/_00_00"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="#000000"
                android:text="@string/operate"/>
        </LinearLayout>

        <com.wuxiantao.wxt.ui.custom.button.StateButton
            android:id="@+id/popup_operate_prompt_know"
            android:layout_width="@dimen/dp_240"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:padding="0dp"
            android:layout_gravity="center_horizontal"
            app:normalTextColor="@color/white"
            app:normalBackgroundStartColor="#FF8777"
            app:normalBackgroundCenterColor="#FF8777"
            app:normalBackgroundEndColor="#FB5654"
            app:normalOrientation="BL_TR"
            app:normalShapeType="LINEAR_GRADIENT"
            android:textSize="@dimen/sp_15"
            app:round="true"
            android:text="@string/i_know"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"/>
</RelativeLayout>