<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/deposit_super_man_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlAccentColor="#FC8778"
        app:srlPrimaryColor="#FC8778">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:id="@+id/deposit_super_man_classic_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_srlSpinnerStyle="Scale"
            app:srlAccentColor="@color/white"
            app:srlDrawableArrow="@mipmap/super_man_fly_white" />

        <com.wuxiantao.wxt.ui.custom.scrollview.CustomScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.wuxiantao.wxt.ui.title.CNToolbar
                    android:id="@+id/fragment_member_center_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cn_rightText="@string/taskhall_text2"
                    app:cn_titleText="@string/scrapingcard_text1" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingRight="@dimen/dp_8"
                    android:paddingBottom="@dimen/dp_15">

                    <TextView
                        android:id="@+id/tv_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/screpingcard_a"
                        android:drawablePadding="@dimen/dp_2"
                        android:text="@string/taskhall_text3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_myBag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/taskhall_text4"
                        android:textColor="@color/color_999"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_crapCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_23"
                    android:layout_marginRight="@dimen/dp_23"
                    android:scaleType="fitXY"
                    android:src="@drawable/screpingcard_e" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_14"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:paddingLeft="@dimen/dp_11"
                    android:paddingRight="@dimen/dp_7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskhall_text5"
                        android:textColor="@color/color_999"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_getValue_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/taskhall_text6"
                        android:textColor="@color/color_999"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progress_scrapingcard_a"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_8"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_16"
                    android:layout_marginRight="@dimen/dp_16"
                    android:max="100"
                    android:progress="30"
                    android:progressDrawable="@drawable/progressbar_bg_divided_dragon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:paddingLeft="@dimen/dp_11"
                    android:paddingRight="@dimen/dp_7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskhall_text9"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_my_heroscroll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/taskhall_text10"
                        android:textColor="@color/color_999"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                    android:id="@+id/nrv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dp_10"
                    android:text="@string/taskhall_text16"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />

                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                    android:id="@+id/rv_scrapingcard_one"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_61"
                    android:layout_marginLeft="@dimen/dp_18"
                    android:layout_marginTop="@dimen/dp_18"
                    android:layout_marginRight="@dimen/dp_18"
                    android:layout_marginBottom="@dimen/dp_14" />

                <TextView
                    android:id="@+id/tv_jackpot_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_11"
                    android:layout_marginRight="@dimen/dp_11"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/dp_25"
                    android:text="@string/taskhall_text17"
                    android:textColor="@color/color_999"
                    android:textSize="@dimen/sp_12" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_34"
                    android:paddingLeft="@dimen/dp_11"
                    android:paddingRight="@dimen/dp_7">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskhall_text18"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/taskhall_text19"
                        android:textColor="@color/color_999"
                        android:textSize="@dimen/sp_12" />
                </RelativeLayout>

                <com.wuxiantao.wxt.ui.custom.recyclerview.NestRecyclerView
                    android:id="@+id/rv_scrapingcard_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </com.wuxiantao.wxt.ui.custom.scrollview.CustomScrollView>

        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

</android.support.design.widget.CoordinatorLayout>