<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"/>
    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_346"
        android:layout_centerInParent="true"
        android:background="@mipmap/invite_success_img"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/dp_43"
            android:layout_height="@dimen/dp_43"
            android:src="@mipmap/taobao_icon"
            android:scaleType="centerCrop"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_gravity="center_horizontal"
            android:textColor="#FF3F3F3F"
            android:text="@string/invite_success"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_48"
                android:textColor="#FFFB6B2B"
                android:text="@string/zero"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_15"
                android:textColor="#FFFB6B2B"
                android:text="@string/yuan"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>